--- a/activity-library/app/build.gradle
+++ b/activity-library/app/build.gradle
@@ -9,21 +9,14 @@ ext.ktor_version = "1.2.1"
 
 android {
     compileSdkVersion 28
-
-    packagingOptions {
-        // see https://stackoverflow.com/questions/56484281/compiler-cannot-resolve-classes-in-io-ktor-client-features-logging
-        exclude 'META-INF/common.kotlin_module'
-        exclude 'META-INF/*.kotlin_module'
-    }
-
-    // buildToolsVersion "29.0.0"
+    buildToolsVersion "29.0.0"
     defaultConfig {
 //        applicationId "org.kivy.nativeuidemo"
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
-        versionName "0.1.1"
-        // testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        versionName "0.1.2"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -31,7 +24,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
+    packagingOptions {
+        // see https://stackoverflow.com/questions/56484281/compiler-cannot-resolve-classes-in-io-ktor-client-features-logging
+        exclude 'META-INF/common.kotlin_module'
+        exclude 'META-INF/*.kotlin_module'
+    }
 
     // activate for lib
     android.libraryVariants.all { variant ->
@@ -41,41 +38,24 @@ android {
     }
 
     lintOptions {
-          abortOnError false
+      abortOnError false
     }
+
+
 }
 
 dependencies {
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-M1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.0.2' //currently leads to merge error
+
+    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
     implementation "io.ktor:ktor-client-core:$ktor_version"
     implementation "io.ktor:ktor-client-websockets:$ktor_version"
     implementation "io.ktor:ktor-client-cio:$ktor_version"
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
-
-// with androidx:
-
-// dependencies {
-//     implementation fileTree(dir: 'libs', include: ['*.jar'])
-//     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-//     implementation 'androidx.appcompat:appcompat:1.0.2' //currently leads to merge error
-
-//     implementation 'androidx.core:core-ktx:1.0.2'
-//     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-//     testImplementation 'junit:junit:4.12'
-//     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-//     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-
-//     implementation "io.ktor:ktor-client-core:$ktor_version"
-//     implementation "io.ktor:ktor-client-websockets:$ktor_version"
-//     implementation "io.ktor:ktor-client-cio:$ktor_version"
-// }
